# Gen-AI-Experiments

./: README.md
Results/: 10k_qa_results.csv  evaluation_results.csv  financial_tool_results.txt
tasks/: all_tasks.ipynb  pyproject.toml  task1.py  task2.py  task3.py  tasks.ipynb  tasks2.ipynb
